--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
     <string name="number_medical_history">Номер истории болезни :</string>
     <string name="add_pulses">Введите пульc плода</string>
     <string name="time_read_pulse">Время записи</string>
+    <string name="load_file">Загрузить данные из файла</string>
+    <string name="analiz">Анализ файла с данными</string>
+    <string name="delete_contact">Удалить контакт</string>
 </resources>
